# libgsystem

./: .gitmodules  Makefile-libgsystem.am
libgsystem/: Makefile.am  autogen.sh  configure.ac
libgsystem/packaging/: libgsystem.spec.in
rpm/: libgsystem.spec
src/: gsystem-file-utils.c  gsystem-file-utils.h  gsystem-shutil.c  libgsystem.pc.in
